--- a/css/style.css
+++ b/css/style.css
@@ -52,16 +52,74 @@ img {
 } */
 
 
-.footer{
+/* about-us */
 
-    position: absolute;
-    right: 0;
-    bottom:0;
-    left:0;
-    background-color: #524b4b;
+
+.about-us h1{
+    text-align: center;
+   padding:30px;
     
-      
 }
+
+.about-us{
+    background-color:#f2f2fc;
+    padding: 40px;
+}
+
+.about-us .container img{
+    align-content: center;
+    max-width:100%;
+    max-height:100%;
+    border-style: none;
+    height: 300px;
+    padding-left: 20px;
+    display: inline-block;
+    margin-left: 120px;
+}
+
+/* about-us ending*/
+
+.team{
+
+    /* margin-top: 100px;
+    margin-bottom: 200px;*/
+    background-color: #EDEDED; 
+    padding: 100px;
+
+
+}
+
+.team .title{
+    margin-bottom: 79px;
+}
+
+.team .title h1,p{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+
+
+.card {
+    
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    flex:0 0 33.33%;
+  }
+  
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  
+  .container {
+    padding: 2px 16px;
+  }
+
+
+
+
 
 
 
