--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,9 @@ img {
 
 /* about-us */
 
-
+.about-us h2{
+    text-align: center;
+}
 .about-us h1{
     text-align: center;
    padding:30px;
@@ -67,17 +69,18 @@ img {
 }
 
 .about-us .container img{
-    align-content: center;
-    max-width:100%;
-    max-height:100%;
+  
     border-style: none;
-    height: 300px;
-    padding-left: 20px;
-    display: inline-block;
-    margin-left: 120px;
+    /* padding-left: 20px; */
+    display: block;
+    
 }
 
 /* about-us ending*/
+
+
+
+/* our team starting */
 
 .team{
 
@@ -89,36 +92,87 @@ img {
 
 }
 
-.team .title{
-    margin-bottom: 79px;
-}
 
-.team .title h1,p{
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-
-
-.card {
+ .team h1,p {
+      
+      text-align: center;
+  }
+  
+ .team img {
     
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    flex:0 0 33.33%;
+    width: 100%;
+    vertical-align: middle;
   }
   
+
+  .team .card {
+    background-color: rgba(255, 255, 255, 0.12);
+  }
   
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .cards_item {
+    display: flex;
+    padding: 1rem;
+  }
+  
+  @media (min-width: 40rem) {
+    .cards_item {
+      width: 50%;
+    }
+  }
+  
+  @media (min-width: 56rem) {
+    .cards_item {
+      width: 33.3333%;
+    }
+  }
+  
+  .card {
+    background-color: white;
+    border-radius: 0.25rem;
+    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+
   .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    background-color: rgba(255, 255, 255, 0.12);
   }
   
   
-  .container {
-    padding: 2px 16px;
+  .card_content {
+    padding: 1rem;
+   
+  }
+  
+  .card_title {
+    color: black;
+    font-size: 1.1rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    margin: 0px;
+    text-align: center;
+  }
+  
+  .card_text {
+    color: black;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    margin-bottom: 1.25rem;    
+    font-weight: 400;
   }
 
 
-
+  /* our team ending */
 
 
 
@@ -138,7 +192,7 @@ img {
 }
 
 .footer h2 {
-
+    text-align: center;
     color: #FFF;      
 }
 
