--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
     padding: 0;
 }
 
-
 .list-non-bullet {
     padding-top: 0.5rem;
     list-style: none;
@@ -53,36 +52,37 @@ img {
 } */
 
 
-
 /* what we do start */
-.what-we-do h1,p{
-  text-align: center;
+
+.what-we-do h1,
+p {
+    text-align: center;
 }
 
-.what-we-do .title{
-  margin-bottom: 30px;
+.what-we-do .title {
+    margin-bottom: 30px;
 }
 
-.what-we-do{
-  padding: 50px;
-}
-.what-we-do .row .event-box{
-  text-align: center;
-  margin-bottom: 20px;
+.what-we-do {
+    padding: 50px;
 }
 
-.what-we-do .row .event-box img{
-  margin-bottom: 20px;
-  margin-right: 20px;
-  width: 100%;
+.what-we-do .row .event-box {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-.event-box h4{
-  text-align: center;
+.what-we-do .row .event-box img {
+    margin-bottom: 20px;
+    margin-right: 20px;
+    width: 100%;
 }
 
- .what-we-do .btn{
-  
+.event-box h4 {
+    text-align: center;
+}
+
+.what-we-do .btn {
     color: #ffffff;
     padding: 0.8rem;
     font-size: 14px;
@@ -91,116 +91,105 @@ img {
     font-weight: 400;
     cursor: pointer;
     background-color: black;
-  
-} 
-
-.what-we-do .btn:hover{
-  color: red;
 }
+
+.what-we-do .btn:hover {
+    color: red;
+}
+
 
 /* what we do end */
 
 
-
 /* about-us */
 
-.about-us h2{
+.about-us h2 {
     text-align: center;
-}
-.about-us h1{
-    text-align: center;
-   padding:30px;
-    
 }
 
-.about-us{
-    background-color:#f2f2fc;
+.about-us h1 {
+    text-align: center;
+    padding: 30px;
+}
+
+.about-us {
+    background-color: #414a4c;
     padding: 40px;
+    color: white;
 }
 
-.about-us .container img{
-  
+.about-us .container img {
     border-style: none;
     /* padding-left: 20px; */
     display: block;
-    
 }
+
 
 /* about-us ending*/
 
 
-
 /* our team starting */
 
-.team{
-
+.team {
     /* margin-top: 100px;
     margin-bottom: 200px;*/
-    background-color: #EDEDED; 
+    background-color: #EDEDED;
     padding: 100px;
-
-
 }
 
+.meet-team h1,
+p {
+    text-align: center;
+}
 
- .team h1,p {
-      
-      text-align: center;
-  }
-  
- .team img {
-    
+.team img {
     width: 100%;
     vertical-align: middle;
-  }
-  
+}
 
-  
-  .cards {
+.cards {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
     margin: 0;
     padding: 0;
-  }
-  
-  .cards_item {
+}
+
+.cards_item {
     display: flex;
     padding: 1rem;
-  }
-  
-  @media (min-width: 40rem) {
+}
+
+@media (min-width: 40rem) {
     .cards_item {
-      width: 50%;
+        width: 50%;
     }
-  }
-  
-  @media (min-width: 56rem) {
+}
+
+@media (min-width: 56rem) {
     .cards_item {
-      width: 33.3333%;
+        width: 33.3333%;
     }
-  }
-  
-  .card {
+}
+
+.card {
     background-color: white;
     border-radius: 0.25rem;
     box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
     overflow: hidden;
-  }
+}
 
-  .card:hover {
+.card:hover {
     background-color: rgba(255, 255, 255, 0.12);
-  }
-  
-  
-  .card_content {
+}
+
+.card_content {
     padding: 1rem;
-   
-  }
-  
-  .card_title {
+}
+
+.card_title {
     color: black;
     font-size: 1.1rem;
     font-weight: 700;
@@ -208,74 +197,168 @@ img {
     text-transform: capitalize;
     margin: 0px;
     text-align: center;
-  }
-  
-  .card_text {
+}
+
+.card_text {
     color: black;
     font-size: 0.875rem;
     line-height: 1.5;
-    margin-bottom: 1.25rem;    
+    margin-bottom: 1.25rem;
     font-weight: 400;
-  }
+}
 
 
-  /* our team ending */
-
-
+/* our team ending */
 
 
 /* footer */
-.footer {
 
-    position:relative;
+.footer {
+    position: relative;
     right: 0;
-    bottom:0;
-    left:0;
+    bottom: 0;
+    left: 0;
     padding: 20px;
     background-color: #444;
     color: #FFF;
-       
-    
 }
 
 .footer h2 {
     text-align: center;
-    color: #FFF;      
+    color: #FFF;
 }
+
 
 /* footer ending*/
 
 
-
-
 /* copyright */
- .copyright {
 
-    position:relative;
-    
+.copyright {
+    position: relative;
     right: 0;
-    bottom:0;
-    left:0;
+    bottom: 0;
+    left: 0;
     background-color: black;
     padding: 20px;
     color: #FFF;
-       
-    
 }
 
 .copyright p {
-
-    color: #FFF;      
+    color: #FFF;
 }
 
-.copyright span{
+.copyright span {
     text-align: center;
 }
 
-
 .copyright span a {
-    margin-right: 20px; 
+    margin-right: 20px;
     color: white;
     font-size: 25px;
-} 
+}
+
+
 /* copyright ending*/
+
+
+/* maps starting */
+
+.map-responsive {
+    overflow: hidden;
+    padding-bottom: 50%;
+    position: relative;
+    height: 0;
+    border: 2px solid grey;
+}
+
+.map-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.container-fluid {
+    padding: 30px;
+    /* background-color: #414a4c; */
+}
+
+
+/* maps ending */
+
+
+/* meet our team startig */
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    /* perspective: 1000px; */
+    margin: 10px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: #bbb;
+    color: black;
+}
+
+.flip-card-back {
+    background-color: #414a4c;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.cards-conatiner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+
+/* meet our team ending */
+
+
+/* blog starting */
+
+.blog-container {
+    padding: 20px;
+    background-color: #414a4c;
+    color: white;
+    margin-top: 15px;
+}
+
+.blog-container h1 {
+    text-align: center;
+}
+
+.writer {
+    text-align: right;
+}
+
+
+/* blogs ending */
