--- a/css/style.css
+++ b/css/style.css
@@ -23,22 +23,29 @@ body {
     background-color: white
 }
 
+
+
 .navbar .link {
     padding: 1rem 1rem;
     text-decoration: none;
     color: black;
+    font-weight: 600;
+    font-size: 1.25rem;
+
 }
 
 .navbar .brand-name {
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: black;
     text-align: left;
     padding-left: 0.5rem;
+    font-weight: bold;
+
 }
 
 .primary-btn {
     background-color: var(--primary-color);
-    color: white;
+    color: black;
     border-radius: 0.5rem;
     padding: 0.7rem;
     margin: 0.5rem;
@@ -291,10 +298,19 @@ p {
 
 /* meet our team startig */
 
+
+.meet-team{
+    background-color: black;
+    color: white;
+    padding: 55px;
+    
+}
+
+
 .flip-card {
     background-color: transparent;
     width: 300px;
-    height: 200px;
+    height: 300px;
     border: 1px solid #f1f1f1;
     /* perspective: 1000px; */
     margin: 10px;
@@ -328,11 +344,23 @@ p {
 }
 
 .flip-card-back {
-    background-color: #414a4c;
-    color: white;
+    background-color:white;
+    color: black;
     transform: rotateY(180deg);
+
 }
 
+.flip-card-back h1{
+    text-align: center;
+    margin-top: 40px;
+}
+
+
+.flip-card-back p{
+
+    margin-top: 40px;
+    
+}
 .cards-conatiner {
     display: flex;
     flex-wrap: wrap;
@@ -349,7 +377,7 @@ p {
     padding: 20px;
     background-color: #414a4c;
     color: white;
-    margin-top: 15px;
+ 
 }
 
 .blog-container h1 {
