--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 @import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+
 :root {
     /* --primary-color: #6c757d; */
 }
+
 
 body {
     margin: 0;
@@ -76,11 +78,11 @@ p {
 
 .why-start .row .event-box {
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: 15px;
 }
 
 .why-start .row .event-box img {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     margin-right: 20px;
     width: 100%;
 }
@@ -88,6 +90,22 @@ p {
 .event-box h4 {
     text-align: center;
 }
+
+.why-start .card{
+    background-color: white;
+    border-radius: 0.25rem;
+    box-shadow: 0 1px 6px rgb(61 65 84 / 15%);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.why-start .card:hover{
+    /* opacity: .5; */
+    transform: scale(1.05);
+}
+
+
 
 .why-start .btn {
     color: #ffffff;
@@ -98,11 +116,18 @@ p {
     font-weight: 400;
     cursor: pointer;
     background-color: black;
+    margin-top: 25px;
 }
 
 .why-start .btn:hover {
-    color: red;
+
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+    color: white;
+    
 }
+
+
 
 
 /* why did we started ending*/
@@ -110,7 +135,7 @@ p {
 
 /* about-us */
 
-.about-us h2 {
+/* .about-us h2 {
     text-align: center;
 }
 
@@ -127,9 +152,12 @@ p {
 
 .about-us .container img {
     border-style: none;
-    /* padding-left: 20px; */
+    padding-left: 20px;
     display: block;
-}
+} */
+
+
+
 
 
 /* about-us ending*/
@@ -138,8 +166,7 @@ p {
 /* our team starting */
 
 .team {
-    /* margin-top: 100px;
-    margin-bottom: 200px;*/
+    
     background-color: #EDEDED;
     padding: 100px;
 }
