--- a/css/style.css
+++ b/css/style.css
@@ -157,10 +157,55 @@ p {
 } */
 
 
+.about-us{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.about-us .right-content h1,h6{
+    
+    text-align: center;
 
 
+}
+
+.about-us .left-image{
+    text-align: center;
+}
+
+
+.about-us .left-image img{
+     height: 400px;
+     width:400px;
+}
+
+.about img{
+
+    width: 1750px;
+    height: 200px;
+
+}
 
 /* about-us ending*/
+
+
+/* objective start */
+
+
+
+
+
+
+/* objective end */
+
+
+
+
+
+
+
+
+
 
 
 /* our team starting */
@@ -425,3 +470,98 @@ p {
 
 
 /* blogs ending */
+
+
+/* .portfolio .container{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  justify-items: center;
+  grid-gap: 0;
+}
+  
+.portfolio .item{
+  width: 100%;
+  overflow: hidden;
+  background: #000;
+}
+      
+.portfolio img{
+  opacity: 0.6;
+  width: 100%;
+  height: 100%;
+  transform: scale(1.15);
+  transition: transform 0.5s, opacity 0.5s;
+}
+.portfolio img:hover{
+  opacity: 1;
+  transform: scale(1.03);
+}
+
+.portfolio .title h1{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+} */
+
+
+/* 
+faq start */
+
+
+.faq{
+    background-color: black;
+    padding: 40px;
+    color: white;
+
+}
+
+.faq h1{
+  text-align: center;
+  font-size: 3rem;
+  padding-bottom: 0.25em;
+  /* border-bottom: 1px solid silver; */
+  /* border-image: linear-gradient(to right, transparent 20%, darkslategrey, transparent 80%)30; */
+}
+
+ details{
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  border: 1px solid silver;
+}
+summary{
+      list-style-type: circle;
+  font-size: 1.25rem;
+  font-weight: bold;
+  cursor: pointer; 
+  position: relative;
+        outline: none;
+        color: silver;
+}
+
+
+summary::after{
+  content: "+";
+  padding: 0.5rem;
+  position: absolute;
+  right: 0.25rem;
+  top: -0.5rem;
+  color: whitesmoke;
+}
+details[open]{
+        background: whitesmoke;
+}
+details[open] summary{
+    color: dimgrey;
+}
+details[open] summary::after{
+  content: "-";
+}
+
+.faq p{
+  color: dimgrey;
+  letter-spacing: 1.5;
+}
+
+/* 
+faq end */
