--- a/css/style.css
+++ b/css/style.css
@@ -125,10 +125,11 @@ p {
 }
 
 
+
 /* why did we started ending*/
 
 
-/* about-us */
+/* about-us starting */
 
 
 /* .about-us h2 {
@@ -601,3 +602,74 @@ details[open] summary::after {
 
 
 /* contact us ending */
+
+
+
+
+
+
+
+
+/* join us section */
+
+
+
+.join-us .image {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    background-size: 100% 100%;
+    background-image: url(../imgs/join.png);
+    display: flex;
+    align-items:flex-end;
+    text-align: center;
+    justify-content: center;
+
+  }
+  
+  
+  .join-us .image .btn{
+  background-color: black;
+  border-radius:1.5em;
+  color:white;
+  
+  padding:0.6em 2.1em;
+  text-align: center;
+  margin-bottom: 100px;
+  cursor: pointer;
+  font-size: 25px;
+  }
+  
+  .join-us .image .btn:hover {
+    transform: scale(1.1);
+    }
+  
+  @media (max-width:767px) {
+    .join-us .image{
+        max-width: 100%;
+        max-height: 200px;
+    }
+  }
+  
+  @media (max-width:767px) {
+    .join-us .image .btn{
+        background-color: black;
+    border-radius:1.5em;
+    color:white;
+    padding:0.6em 0.9em;
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 40px;
+    font-size: 10px;
+    }
+  }
+  
+  .join-us .content .title{
+    padding-top: 20px;
+  }
+  
+  .join-us .content p{
+    font-size: 1.25rem;
+    padding: 20px;
+  }
+  
