--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ p {
 /* faq start */
 
 .faq {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 9);
     color: white;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -673,3 +673,103 @@ details[open] summary::after {
     padding: 20px;
   }
   
+
+
+
+  /* donate section */
+  .donate .image {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    background-size: 100% 100%;
+    background-image: url(../imgs/donate.png);
+    display: flex;
+    align-items:flex-end;
+    text-align: center;
+    justify-content: center;
+
+  }
+  .donate .image .btn{
+    background-color: white;
+    border-radius:1.5em;
+    color:black;
+    font-weight: 500;
+    padding:0.6em 2.1em;
+    text-align: center;
+    margin-bottom: 100px;
+    cursor: pointer;
+    font-size: 25px;
+    }
+    
+    .donate .image .btn:hover {
+      transform: scale(1.1);
+      }
+    
+    @media (max-width:767px) {
+      .donate .image{
+          max-width: 100%;
+          max-height: 200px;
+      }
+    }
+    
+    @media (max-width:767px) {
+      .donate .image .btn{
+          background-color: white;
+      border-radius:1.5em;
+      color:black;
+      padding:0.6em 0.9em;
+      text-align: center;
+      cursor: pointer;
+      margin-bottom: 40px;
+      font-size: 10px;
+      }
+    }
+
+
+    .donate .content .title{
+        padding-top: 20px;
+      }
+      
+      .donate .content p{
+        font-size: 1.25rem;
+        padding: 20px;
+      }
+    
+
+    .details{
+        margin-right: auto;
+        margin-left: auto;
+        max-width:800px;
+        background-color: #f6f6f6;
+    }
+
+    .details h2{
+        font-weight: bolder; 
+        padding-bottom: 40px;
+        padding-top: 40px; 
+         color:black; 
+    }
+
+#paytmbtn{
+    background-color: black;
+    color: white;
+}
+
+
+.details button{
+    background-color: white;
+    color:black;
+    height: 45px;
+    width:49.5%;
+    display: inline-block;
+    font-size: 19px;
+}
+
+
+.details .demo1{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-size: 26px;
+    font-weight: 400;
+
+}
