--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,25 @@ body {
 .list-non-bullet {
     padding-top: 0.5rem;
     list-style: none;
-    text-align: center;
 }
+
+.navbar-nav {
+    margin-left: auto;
+}
+
+
+/* .dropdown-menu-large {
+    margin-left: 16px;
+    margin-right: 16px;
+    padding: 20px 0px;
+    left: auto;
+} */
 
 .list-item-inline {
     display: inline;
-    padding: 1 rem;
     font-style: bold;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .navbar {
@@ -35,7 +47,7 @@ body {
 }
 
 .navbar .brand-name {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-left: 0.5em;
     color: black;
     text-align: left;
@@ -123,7 +135,6 @@ p {
     transform: scale(1.05);
     color: white;
 }
-
 
 
 /* why did we started ending*/
@@ -604,15 +615,7 @@ details[open] summary::after {
 /* contact us ending */
 
 
-
-
-
-
-
-
 /* join us section */
-
-
 
 .join-us .image {
     width: 100%;
@@ -621,155 +624,146 @@ details[open] summary::after {
     background-size: 100% 100%;
     background-image: url(../imgs/join.png);
     display: flex;
-    align-items:flex-end;
+    align-items: flex-end;
     text-align: center;
     justify-content: center;
+}
 
-  }
-  
-  
-  .join-us .image .btn{
-  background-color: black;
-  border-radius:1.5em;
-  color:white;
-  
-  padding:0.6em 2.1em;
-  text-align: center;
-  margin-bottom: 100px;
-  cursor: pointer;
-  font-size: 25px;
-  }
-  
-  .join-us .image .btn:hover {
+.join-us .image .btn {
+    background-color: black;
+    border-radius: 1.5em;
+    color: white;
+    padding: 0.6em 2.1em;
+    text-align: center;
+    margin-bottom: 100px;
+    cursor: pointer;
+    font-size: 25px;
+}
+
+.join-us .image .btn:hover {
     transform: scale(1.1);
-    }
-  
-  @media (max-width:767px) {
-    .join-us .image{
+}
+
+@media (max-width:767px) {
+    .join-us .image {
         max-width: 100%;
         max-height: 200px;
     }
-  }
-  
-  @media (max-width:767px) {
-    .join-us .image .btn{
+}
+
+@media (max-width:767px) {
+    .join-us .image .btn {
         background-color: black;
-    border-radius:1.5em;
-    color:white;
-    padding:0.6em 0.9em;
-    text-align: center;
-    cursor: pointer;
-    margin-bottom: 40px;
-    font-size: 10px;
+        border-radius: 1.5em;
+        color: white;
+        padding: 0.6em 0.9em;
+        text-align: center;
+        cursor: pointer;
+        margin-bottom: 40px;
+        font-size: 10px;
     }
-  }
-  
-  .join-us .content .title{
+}
+
+.join-us .content .title {
     padding-top: 20px;
-  }
-  
-  .join-us .content p{
+}
+
+.join-us .content p {
     font-size: 1.25rem;
     padding: 20px;
-  }
-  
+}
 
 
+/* donate section */
 
-  /* donate section */
-  .donate .image {
+.donate .image {
     width: 100%;
     height: 500px;
     object-fit: cover;
     background-size: 100% 100%;
     background-image: url(../imgs/donate.png);
     display: flex;
-    align-items:flex-end;
+    align-items: flex-end;
     text-align: center;
     justify-content: center;
+}
 
-  }
-  .donate .image .btn{
+.donate .image .btn {
     background-color: white;
-    border-radius:1.5em;
-    color:black;
+    border-radius: 1.5em;
+    color: black;
     font-weight: 500;
-    padding:0.6em 2.1em;
+    padding: 0.6em 2.1em;
     text-align: center;
     margin-bottom: 100px;
     cursor: pointer;
     font-size: 25px;
-    }
-    
-    .donate .image .btn:hover {
-      transform: scale(1.1);
-      }
-    
-    @media (max-width:767px) {
-      .donate .image{
-          max-width: 100%;
-          max-height: 200px;
-      }
-    }
-    
-    @media (max-width:767px) {
-      .donate .image .btn{
-          background-color: white;
-      border-radius:1.5em;
-      color:black;
-      padding:0.6em 0.9em;
-      text-align: center;
-      cursor: pointer;
-      margin-bottom: 40px;
-      font-size: 10px;
-      }
-    }
+}
 
+.donate .image .btn:hover {
+    transform: scale(1.1);
+}
 
-    .donate .content .title{
-        padding-top: 20px;
-      }
-      
-      .donate .content p{
-        font-size: 1.25rem;
-        padding: 20px;
-      }
-    
-
-    .details{
-        margin-right: auto;
-        margin-left: auto;
-        max-width:800px;
-        background-color: #f6f6f6;
+@media (max-width:767px) {
+    .donate .image {
+        max-width: 100%;
+        max-height: 200px;
     }
+}
 
-    .details h2{
-        font-weight: bolder; 
-        padding-bottom: 40px;
-        padding-top: 40px; 
-         color:black; 
+@media (max-width:767px) {
+    .donate .image .btn {
+        background-color: white;
+        border-radius: 1.5em;
+        color: black;
+        padding: 0.6em 0.9em;
+        text-align: center;
+        cursor: pointer;
+        margin-bottom: 40px;
+        font-size: 10px;
     }
+}
 
-#paytmbtn{
+.donate .content .title {
+    padding-top: 20px;
+}
+
+.donate .content p {
+    font-size: 1.25rem;
+    padding: 20px;
+}
+
+.details {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 800px;
+    background-color: #f6f6f6;
+}
+
+.details h2 {
+    font-weight: bolder;
+    padding-bottom: 40px;
+    padding-top: 40px;
+    color: black;
+}
+
+#paytmbtn {
     background-color: black;
     color: white;
 }
 
-
-.details button{
+.details button {
     background-color: white;
-    color:black;
+    color: black;
     height: 45px;
-    width:49.5%;
+    width: 49.5%;
     display: inline-block;
     font-size: 19px;
 }
 
-
-.details .demo1{
+.details .demo1 {
     padding-top: 25px;
     padding-bottom: 25px;
     font-size: 26px;
     font-weight: 400;
-
 }
