--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,16 @@ body {
 
 .navbar-nav {
     margin-left: auto;
+    padding-right: 1rem;
+}
+
+.nav-div {
+    padding-right: 1rem;
+    color: black;
+}
+
+nav .navbar-nav li a {
+    color: black !important;
 }
 
 
@@ -44,6 +54,7 @@ body {
     color: black;
     font-weight: 600;
     font-size: 1.25rem;
+    cursor: pointer;
 }
 
 .navbar .brand-name {
