readmore working fine

--- a/css/style.css
+++ b/css/style.css
@@ -508,6 +508,14 @@ p {
     display: none;
 }
 
+#more2 {
+    display: none;
+}
+
+#more3 {
+    display: none;
+}
+
 
 /* #myBtn {
     float: left;
